# sql-copilot

./: .gitignore  README.md  demo.db  pyproject.toml  session_memory.db
chroma_store/: chroma.sqlite3
sql_copilot/: agent.py  cli.py  db.py  embeddings.py  memory.py  safety.py  schema.py
